<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_new"
    android:layout_margin="5dp"
    android:padding="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <Button
        android:id="@+id/cartItem_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productItemImage"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/productItemImage"
        android:layout_width="117dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/productItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cart_item"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/productItemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productItemPrice"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:text="@string/ItemPrice"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/productItemImage"
        app:layout_constraintTop_toBottomOf="@+id/productItemName" />

    <TextView
        android:id="@+id/cartItem_merchant"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:text="@string/merchant"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productItemImage"
        app:layout_constraintTop_toBottomOf="@+id/productItemPrice"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/cartItem_plus"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cartItem_quanity"
        app:layout_constraintTop_toBottomOf="@+id/cartItem_merchant"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cartItem_minus"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartItem_merchant"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cartItem_quanity"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cartItem_minus"
        app:layout_constraintTop_toBottomOf="@+id/cartItem_merchant" />


</android.support.constraint.ConstraintLayout>