<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CartActivity">

    <include
        android:id="@+id/cart_failure_layout"
        layout="@layout/failure_layout" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="402dp"
        android:layout_height="453dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/cart_deleteAll"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delete_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_recycler_view" />

    <Button
        android:id="@+id/cart_checkOut"
        android:layout_width="168dp"
        android:layout_height="88dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="4dp"
        android:text="@string/checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_deleteAll" />

    <TextView
        android:id="@+id/cart_pricetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/cart_checkOut"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cart_checkOut" />

    <TextView
        android:id="@+id/cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/cart_checkOut"
        app:layout_constraintEnd_toStartOf="@+id/cart_checkOut"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_pricetext" />


</android.support.constraint.ConstraintLayout>
